# airrship

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  setup.cfg
airrship/: create_repertoire.py
airrship.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
airrship/data/: D_3_family_trimming_proportions.csv  (+28 more)
c57bl6_reference/: D_3_family_trimming_proportions.csv  D_5_family_trimming_proportions.csv  IGHD_usage.csv  IGHD_usage_gene.csv  IGHJ_usage.csv  IGHJ_usage_gene.csv  IGHV_usage.csv  IGHV_usage_gene.csv  J_family_trimming_proportions.csv  V_family_trimming_proportions.csv  cdr1_kmer_base_usage.csv  cdr2_kmer_base_usage.csv  cdr3_kmer_base_usage.csv  cdr_kmer_base_usage.csv  fwr1_kmer_base_usage.csv  fwr2_kmer_base_usage.csv  fwr3_kmer_base_usage.csv  fwr4_kmer_base_usage.csv  fwr_kmer_base_usage.csv  imgt_mouse_IGHD.fasta  imgt_mouse_IGHJ.fasta  imgt_mouse_IGHV.fasta  mut_freq_per_seq_per_family.csv  np1_first_base_probs.csv  np1_lengths_proportions.csv  np1_transition_probs_per_position_igag.csv  np1_transition_probs_per_position_igdm.csv  np2_first_base_probs.csv  np2_lengths_proportions.csv  np2_transition_probs_per_position_igag.csv  np2_transition_probs_per_position_igdm.csv
docs/: data.md  index.md  model.md  non_human.md  output.md  parameters.md  python_use.md  quickstart.md  release.md  requirements.txt
example_output/: example_repertoire.fasta  example_repertoire.tsv  example_repertoire_locus.csv  example_repertoire_summary.txt
example_repertoires/: airrship_repertoire_1_locus.csv  airrship_repertoire_1_summary.txt  airrship_repertoire_2_locus.csv  airrship_repertoire_2_summary.txt  airrship_shm_repertoire_1_locus.csv  airrship_shm_repertoire_1_summary.txt  airrship_shm_repertoire_2_locus.csv  airrship_shm_repertoire_2_summary.txt
scripts/: create_np_first_bases.py  create_np_lengths_files.py  create_np_transitions_files.py  create_shm_files.py  create_trimming_files.py  create_vdj_files.py
(+1 files in other folders)
