[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "airrship"
dynamic = ["version", "entry-points"]
authors = [{name = "Catherine Sutherland", email = "catherine.sutherland@ed.ac.uk"}]
description = "Simulation of B cell receptor repertoires"
readme = "README.md"
license = {file = "LICENSE"}
keywords=['bioinformatics', 'sequencing', 'immunology', 'adaptive immunity',
        'immunoglobulin', 'adaptive immune receptor repertoires','AIRR-seq', 
        'antibody','repertoire sequencing', 'B cell repertoire']
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {attr = "airrship.__version__"}



